--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,14 @@
         "symfony/symfony": "2.3.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "2.3.*",
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/rest-bundle"   : "1.0.*",
         "jms/serializer-bundle"          : "0.12.*",
         "fsc/hateoas-bundle": "0.5.x-dev",
-        "nelmio/api-doc-bundle"          : "dev-master"
+        "nelmio/api-doc-bundle"          : "~2.4"
     },
     "scripts": {
         "post-install-cmd": [
