--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,3 +75,14 @@ nelmio_api_doc:
     sandbox:
         request_format:
             method: accept_header
+
+nelmio_cors:
+    paths:
+        '^/v1/.*\d$':
+            allow_origin:  ['*']
+            allow_headers: ['X-Requested-With', 'Content-Type']
+            allow_methods: ['GET', 'PUT', 'DELETE']
+        '^/v1/.*\D$':
+            allow_origin:  ['*']
+            allow_headers: ['X-Requested-With', 'Content-Type']
+            allow_methods: ['GET', 'POST'] 
