--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,11 @@
         "nelmio/api-doc-bundle": "~2.4",
         "nelmio/cors-bundle": "~1.0"
     },
+    "require-dev" :{
+        "sanpi/behatch-contexts"  : "~1.3.0",
+        "behat/symfony2-extension": "~1.1.1",
+        "behat/mink-browserkit-driver":  "*"
+    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
