--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,15 +2,10 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     symfony
+    database_name:     babitch
     database_user:     root
     database_password: ~
     database_path:     ~
-
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
