--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -15,3 +15,7 @@ framework:
 web_profiler:
     toolbar: false
     intercept_redirects: false
+
+atoum:
+    bundles:
+        CytronBabitchBundle: ~
