--- a/src/Cytron/Bundle/BabitchBundle/Resources/config/routing.yml
+++ b/src/Cytron/Bundle/BabitchBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ CytronBabitchBundle_Game:
 CytronBabitchBundle_Player:
     resource: "@CytronBabitchBundle/Controller/PlayerController.php"
     type:     rest
+
+CytronBabitchBundle_League:
+    resource: "@CytronBabitchBundle/Controller/LeagueController.php"
+    type:     rest
